<resources>
    <string name="app_name">Book Keeper</string>
    <string name="database_name">book-keeper-db</string>
    <string name="library_button">Your Library</string>
    <string name="browse_button">Browse Books</string>

    <string name="pages_read">Pages Read: %1$d of %2$d</string>

    <string name="label_home_page">Book Keeper</string>
    <string name="label_book_detail">Book Details</string>
    <string name="label_library">Your Library</string>
    <string name="label_browse_books">Browse Books</string>
    <string name="label_search_books_hint">Search books…</string>

    <string name="label_search_library_hint">Search library…</string>

    <string name="pages_read_button_text">Pages Read:\n%1$d/%2$d</string>


    <!-- Dialogs -->
    <string name="delete_book_header_text">Delete Book?</string>
    <string name="delete_book_dialog_message">Are you sure you want to delete this book from your library?
        All notes and book progress will be permanently deleted. </string>

    <string name="delete_note_header_text">Delete Note?</string>
    <string name="delete_note_dialog_message">Are you sure you want to delete this note permanently?</string>

    <string name="cancel_button_text">Cancel</string>
    <string name="confirm_button_text">Confirm</string>


    <!-- Placeholders -->
    <string name="note_category_placeholder">Category</string>

</resources>