<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <!-- Delete pages message -->
    <TextView
        android:id="@+id/delete_book_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:text="@string/delete_book_header_text"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_book_message"
        />

        <TextView
            android:id="@+id/delete_book_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/delete_book_dialog_message"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/delete_book_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <!-- Buttons -->
    <Button
        android:id="@+id/cancel_delete_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_delete_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_book_message"/>

    <Button
        android:id="@+id/confirm_delete_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/confirm_button_text"
        app:layout_constraintStart_toEndOf="@id/cancel_delete_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_book_message"/>

</androidx.constraintlayout.widget.ConstraintLayout>
